Fix spacing on test characters

--- a/src/components/MatchGame/MatchGame.scss
+++ b/src/components/MatchGame/MatchGame.scss
@@ -61,6 +61,9 @@
       margin: 0;
     }
   }
+  &-actions {
+    margin-top: $spacing;
+  }
   .button--secondary {
     font-weight: 500;
   }
