--- a/src/components/TestGame/TestGame.scss
+++ b/src/components/TestGame/TestGame.scss
@@ -13,19 +13,38 @@
     padding: 0;
     list-style: none;
     font-size: $xl-size;
+    margin: Calc($spacing / 2) 0;
   }
 
   &-character {
-    margin-right: Calc($spacing / 2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    //margin-right: Calc($spacing / 2);
     width: 3rem;
     height: 3.5rem;
-    border-bottom: 2px $dark-grey solid;
     &--active {
       border: 2px $dark-grey solid;
       border-radius: $border-radius;
+      span {
+        display: none !important;
+      }
     }
     &--completed {
       border: none;
+      span {
+        display: none !important;
+      }
+    }
+    span {
+      display: flex;
+      width: 80%;
+      height: 2px;
+      background: $dark-grey;
+    }
+    p {
+      margin: 0;
     }
   }
 
@@ -34,8 +53,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 0;
-    margin-top: $spacing;
-    margin-bottom: $spacing;
+    margin: $spacing 0;
     list-style: none;
   }
 
@@ -44,7 +62,7 @@
   }
 
   &-content {
-    padding-top: 1em;
+    padding-top: $spacing;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,6 +72,11 @@
     font-weight: 600;
     text-align: center;
     font-size: $m-size;
+    padding-bottom: Calc($spacing / 2);
+  }
+
+  &-actions {
+    padding-top: $spacing;
   }
 
   .test-button--selected {
